# neviraide-core

./: Cargo.toml
src/: config.rs  error.rs  lib.rs
src/config/: basic.rs  git.rs  lsp.rs  ui.rs
