[package]
name = "neviraide-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "neviraide_core"
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { version = "0.5.1", features = ["neovim-0-10", "test", "neovim-nightly", "libuv"] }

tokio = { version = "1", features = ["full"] }

thiserror = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# dirs = "6.0"
# regex = "1.11"
